# Librium

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  AI_RULES.md  Build.ps1  CMakeLists.txt  CMakePresets.json  Dockerfile.deploy  Dockerfile.linux  GEMINI.md  README.md  Run-AllTests.ps1  RunAllTests.ps1  vcpkg.json
apps/Librium/: CMakeLists.txt  Main.cpp  ProtocolProgressReporter.hpp  Utils.hpp  Version.hpp  Version.hpp.in
apps/Librium/Commands/: CExportCommand.cpp  CExportCommand.hpp  CHelperCommands.cpp  CHelperCommands.hpp  CIndexCommand.cpp  CIndexCommand.hpp  CQueryCommand.cpp  CQueryCommand.hpp  ICommand.hpp
apps/Librium/Indexer/: Indexer.cpp  Indexer.hpp  ThreadSafeQueue.hpp
apps/indexer/: CMakeLists.txt  Main.cpp  Version.hpp
apps/query/: CMakeLists.txt  Main.cpp  Version.hpp
config/: example_config.json
deploy/: docker-compose.yml  entrypoint.sh
docs/: AddingNewCommands.md  Adding_New_Commands.md  CodeReviewInstructions.md  CodeStyleGuidelines.md  Code_Style_Guidelines.md  CommitMessageGuidelines.md  Commit_Message_Guidelines.md  ProjectDocumentation.md  Project_Documentation.md  WebInterface.md  Web_Interface.md
libs/Config/: AppConfig.cpp  AppConfig.hpp  CMakeLists.txt
libs/Database/: CMakeLists.txt  CSqliteDatabase.cpp  CSqliteDatabase.hpp  CSqliteStatement.cpp  CSqliteStatement.hpp  Database.cpp  Database.hpp  DatabaseArchive.cpp  DatabaseImport.cpp  DatabaseLifecycle.cpp  DatabaseMaintenance.cpp  DatabaseQuery.cpp  DatabaseSchema.cpp  DatabaseSchema.hpp  DatabaseStatements.cpp  DatabaseStats.cpp  IBookReader.hpp  IBookWriter.hpp  ISqlDatabase.hpp  ISqlStatement.hpp  QueryTypes.hpp  SearchQueryParser.cpp  SearchQueryParser.hpp  SqlDatabase.hpp  SqlQueries.hpp  SqlStatement.hpp  SqliteDatabase.cpp  SqliteDatabase.hpp  SqliteFunctions.cpp  SqliteFunctions.hpp  SqliteStatement.cpp  SqliteStatement.hpp
libs/Fb2/: CMakeLists.txt  Fb2Parser.cpp  Fb2Parser.hpp
libs/Indexer/: CMakeLists.txt  IProgressReporter.hpp  Indexer.cpp  Indexer.hpp  IndexerArchive.cpp  IndexerImportSupport.cpp  IndexerInternal.hpp  IndexerRun.cpp  IndexerRunSupport.cpp  IndexerWorker.cpp  IndexerWriter.cpp
libs/Inpx/: BookRecord.hpp  CMakeLists.txt  InpParser.cpp  InpParser.hpp
libs/Log/: CMakeLists.txt  Logger.cpp  Logger.hpp
libs/Protocol/: CMakeLists.txt  JsonProtocol.cpp  JsonProtocol.hpp
libs/Query/: BookQuery.cpp  BookQuery.hpp  CMakeLists.txt  (+4 more)
libs/Service/: AppService.cpp  AppService.hpp  CMakeLists.txt  ICommandChannel.hpp  IRequest.hpp  IResponse.hpp  IServiceAction.hpp  LibraryApi.cpp  LibraryApi.hpp  Response.hpp  ServiceAction.hpp  StdIoChannel.cpp  StdIoChannel.hpp
libs/Service/Actions/: Actions.cpp  Actions.hpp
libs/core/: CMakeLists.txt
libs/core/Config/: AppConfig.hpp
libs/core/Db/: Database.cpp  Database.hpp
libs/core/Fb2/: Fb2Parser.hpp
libs/core/Inpx/: InpParser.hpp
libs/core/Log/: Logger.cpp
libs/core/Query/: BookQuery.cpp  BookQuery.hpp  QueryParams.hpp  QueryResult.hpp  QuerySerializer.cpp
libs/core/Zip/: ZipReader.hpp
scripts/: Build.py  Core.py  LibGen.py  LibraryGenerator.py  RealLibraryTest.py  Run.py  RunWeb.py  ScenarioRunner.py  ScenarioTester.py  SmokeTester.py  Test.py  build.py  run.py  test.py
tests/: CMakeLists.txt  CreateTestData.py  TestConfig.cpp  TestDb.cpp  TestInpx.cpp  TestLogger.cpp  TestQuery.cpp  TestVersion.cpp  TestZip.cpp
tests/Integration/: RunIntegrationTests.py
tests/RealLibrary/: 01_TestImport.py  02_SearchQuality.py  03_CheckLogs.py  04_TestFiltering.py  05_TestExport.py  06_TestFb2Parsing.py  RunAllRealTests.py  fb2_library_config.json  filter_library_config.json  real_library_config.json
tests/Scenarios/01_Search/: annotation_flag.json  coauthors.json  complex_queries.json  cyrillic_search.json  empty_query.json  multi_param_search.json  pagination_consistency.json  query_params.json  search_empty_result.json  search_operators.json  sql_injection_safety.json  unicode_scripts.json  wildcard_escape.json  yo_norm.json
tests/Scenarios/02_Filtering/: combined_filters.json  date_range_filter.json  deleted_filter.json  genre_search.json  lang_filter.json  rating_contradiction.json  rating_filter.json  size_filter.json
tests/Scenarios/03_Parsing/: empty_db_stats.json  fb2_annotation.json  fb2_namespaces.json  fb2_recursive.json  long_authors.json  missing_fields.json  pagination.json  robustness.json  stats_test.json
tests/Scenarios/04_RealData/: smoke_real.json
tests/Scenarios/05_Upgrade/: fast_upgrade.json  incremental.json  progress_test.json  skip_existing.json  upgrade_no_new_archives.json  upgrade_with_deleted_books.json
tests/Scenarios/06_Export/: basic_export.json  export_filename_sanitization.json  export_invalid_id.json  export_multiple_books.json  export_unicode_filename.json
tests/Scenarios/07_Utility/: get_book.json  get_book_all_fields.json  get_book_cover.json  get_book_invalid_id.json  get_book_no_cover.json  init_config.json
tests/Scenarios/08_Protocol/: invalid_param_types.json  malformed_request.json  missing_required_params.json  rapid_sequential_requests.json  unknown_action.json
tests/Scenarios/09_Integrity/: duplicate_import.json  stats_consistency.json
tests/Unit/: CMakeLists.txt  CreateTestData.py  TestAppService.cpp  TestBase64.cpp  TestBookFilter.cpp  TestConfig.cpp  TestConfigEdgeCases.cpp  TestConfigUtils.cpp  TestDatabaseGetBook.cpp  TestDatabaseQuery.cpp  TestDb.cpp  TestDbTransactions.cpp  TestFb2.cpp  TestFb2Cover.cpp  TestFb2Encoding.cpp  TestIndexer.cpp  TestInpx.cpp  TestInpxEdgeCases.cpp  TestInpxExtra.cpp  TestLibraryApi.cpp  TestLogger.cpp  TestLoggerExtra.cpp  TestMain.cpp  TestProtocol.cpp  TestQuery.cpp  TestQueryEdgeCases.cpp  TestSearchQueryParser.cpp  TestSearchQueryParserEdgeCases.cpp  TestSqliteFunctions.cpp  TestStringUtils.cpp  TestStringUtilsSanitize.cpp  TestThreadSafeQueue.cpp  TestUtils.hpp  TestVersion.cpp  TestZip.cpp  TestZipEdgeCases.cpp  TestZipInstance.cpp
tests/integration/: Invoke-Assert.ps1  New-TestLibrary.ps1  Run-Tests.ps1  Test-Import.ps1  Test-Query.ps1
web/: package.json  server.js  web_config.example.json
(+33 files in other folders)
